# transcript

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs
src/components/: AudioControls.tsx  BlogPostDisplay.tsx  DeviceSelector.tsx  ModelStatus.tsx  RecordingIndicator.tsx  StyleSelector.tsx  ToastContainer.tsx  TranscriptDisplay.tsx
src/hooks/: useAudioDevices.ts  useBlogWriter.ts  useToast.ts  useTranscription.ts
src/lib/: blogPrompt.ts  platform.ts  tauriAudio.ts  types.ts
src/workers/: blogWorker.ts  whisperWorker.ts
